--- a/views/index.html
+++ b/views/index.html
@@ -69,7 +69,7 @@
                 }
 
                 document.getElementById('support').innerHTML = `The support letter has ${json.support} signatures (+${newSupport}, <span title="Signatures (PRs) that haven't been merged yet">${json.supportPending} pending on GitHub</span>)`;
-                document.getElementById('open').innerHTML = `The open letter has ${json.open} signatures by 16 initial signers, 48 organizations and ${json.open - 48 - 16} individuals (+${newOpen})`;
+                document.getElementById('open').innerHTML = `The open letter has ${json.open} signatures (+${newOpen})`;
 
                 if (json.open > json.support) {
                     document.getElementById('ahead').innerHTML = `The open letter has ${json.open - json.support} more signatures than the support letter`;
